# camera-doubler

./: .dockerignore  .env.adapter-rby1.example  .env.dataset-builder.example  .env.edge.example  .env.receiver.example  .env.web-relay.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  REVIEW_REPORT.md  ROBOT_MULTICAMERA_BACKEND_DESIGN.md  compose.edge.yaml  compose.receiver.yaml  rust-toolchain.toml
.github/workflows/: ci.yaml
adapters/: __init__.py
adapters/gripper_fixture/: __init__.py  app.py
adapters/rby1/: __init__.py  app.py  mapping.py
adapters/rby1/docker/: Dockerfile
adapters/template/: __init__.py  app.py
adapters/template/docker/: Dockerfile
config/: camera-policy.example.yaml  embodiment.example.yaml  protocol_constants.toml
crates/adapter-client/: Cargo.toml
crates/adapter-client/src/: client.rs  embodiment.rs  lib.rs  registry.rs
crates/camera-discovery/: Cargo.toml
crates/camera-discovery/src/: lib.rs  linux.rs  tests.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/edge-core/: Cargo.toml
crates/edge-core/src/: context.rs  control.rs  gateway.rs  lib.rs  linux.rs  main.rs  ui_runtime.rs
crates/metadata-codec/: Cargo.toml
crates/metadata-codec/src/: lib.rs  metadata_ext.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: lib.rs
crates/receiver/: Cargo.toml
crates/receiver/src/: lib.rs  linux.rs  main.rs  replay.rs  runtime.rs  session.rs  synchronize.rs
crates/stream-identity/: Cargo.toml
crates/stream-identity/src/: lib.rs
crates/timebase/: Cargo.toml
crates/timebase/src/: clock_mapper.rs  lib.rs
crates/virtual-camera/: Cargo.toml
crates/virtual-camera/src/: lib.rs
crates/web-relay/: Cargo.toml
crates/web-relay/src/: lib.rs  linux.rs  main.rs
docker/: Dockerfile.dataset-builder  Dockerfile.edge-core  Dockerfile.receiver  Dockerfile.web-relay
docs/: OPERATIONS.md  PROTOCOL_CONSTANTS.md  TRANSPORT_BOOTSTRAP.md
docs/adr/: ADR-0001-workspace-and-vendor-boundary.md  ADR-0002-synthetic-camera-validation.md  ADR-0003-control-and-key-boundaries.md
docs/audit/: ACCEPTANCE_EVIDENCE.csv  FINAL_RELEASE_AUDIT.md  OPEN_GATES.md
docs/implementation/: ENVIRONMENT_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  REQUIREMENTS_TRACEABILITY.md  WEB_RELAY_DEVELOPMENT_PLAN.md  WEB_RELAY_PERFORMANCE_ANALYSIS.md
docs/manuals/: ADAPTER_AUTHORING_FOR_AI_AGENTS.md  DEPLOYMENT_RUNBOOK.md  PRODUCTION_CHECKLIST.md  README.md  SETUP_AND_SECRETS.md  VIDEO_AND_METADATA_ACCESS.md
proto/: adapter_api.proto  backend_api.proto  frame_metadata.proto  receiver_api.proto
python/: __init__.py
python/adapter_runtime/: __init__.py  service.py
python/dataset_builder/: requirements.txt
python/dataset_builder/app/: __init__.py  __main__.py  builder.py  healthcheck.py  transaction.py
python/dataset_builder/tests/: test_api.py  test_builder.py  test_transaction.py
python/metadata_client/: requirements.txt
scripts/: adapter-uds-smoke.py  bootstrap-example-config.sh  generate-dev-secrets.sh  generate-proto.py  package.sh  prepare-host.sh  receiver-metadata-client.py  run-fault-tests.sh  run-metadata-client-test.sh  run-srt-reconnect-test.sh  run-synthetic-roundtrip.sh  run-web-relay-test.sh  send-synthetic-srt-fixture.sh  validate-package.py  verify-environment.sh  verify-vendor-boundary.py
secrets/: README.md
testdata/: streamid_vectors.json
validation/: RELEASE_CHECKS.txt  STATIC_CHECKS.txt  final_release_audit.json  four_pass_results.json  web_relay_four_pass_results.json
validation/security/: sbom-dataset.cdx.json  sbom-rby1.cdx.json  sbom-template.cdx.json  trivy-dataset.json  trivy-edge.json  trivy-rby1.json  trivy-receiver.json  trivy-template.json  trivy-web-relay.json
