[package]
name = "robot-multicam-camera-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
blake3.workspace = true
data-encoding = "=2.6.0"
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
