[package]
name = "robot-multicam-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }

[lints]
workspace = true
