[package]
name = "edge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "robot-edge-core"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
hex.workspace = true
percent-encoding.workspace = true
prost.workspace = true
robot-multicam-adapter-client = { path = "../adapter-client" }
robot-multicam-camera-discovery = { path = "../camera-discovery" }
robot-multicam-common = { path = "../common" }
robot-multicam-metadata-codec = { path = "../metadata-codec" }
robot-multicam-protocol = { path = "../protocol" }
robot-multicam-stream-identity = { path = "../stream-identity" }
robot-multicam-timebase = { path = "../timebase" }
robot-multicam-virtual-camera = { path = "../virtual-camera" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { version = "=0.23.4", features = ["v1_22"] }
gstreamer-app = { version = "=0.23.4", features = ["v1_22"] }
gstreamer-base = { version = "=0.23.4", features = ["v1_22"] }

[lints]
workspace = true
