[package]
name = "robot-multicam-metadata-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crc32c.workspace = true
prost.workspace = true
robot-multicam-protocol = { path = "../protocol" }
thiserror.workspace = true
uuid.workspace = true
zstd = "=0.13.2"

[lints]
workspace = true
