[package]
name = "robot-multicam-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored = "=3.1.0"
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tonic-build = "=0.12.3"
uuid.workspace = true

[lints]
workspace = true
