[package]
name = "receiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "robot-multicam-receiver"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
fs2.workspace = true
hex.workspace = true
prost.workspace = true
robot-multicam-common = { path = "../common" }
robot-multicam-metadata-codec = { path = "../metadata-codec" }
robot-multicam-protocol = { path = "../protocol" }
robot-multicam-stream-identity = { path = "../stream-identity" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { version = "=0.23.4", features = ["v1_22"] }
gstreamer-app = { version = "=0.23.4", features = ["v1_22"] }
gstreamer-base = { version = "=0.23.4", features = ["v1_22"] }

[lints]
workspace = true
