[package]
name = "robot-multicam-stream-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
percent-encoding.workspace = true
robot-multicam-protocol = { path = "../protocol" }
sha2.workspace = true
subtle = "=2.6.1"
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
