[package]
name = "robot-multicam-virtual-camera"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
