[package]
name = "web-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "robot-multicam-web-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
hex.workspace = true
prost.workspace = true
robot-multicam-common = { path = "../common" }
robot-multicam-protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tonic.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gstreamer = { version = "=0.23.4", features = ["v1_22"] }
gstreamer-app = { version = "=0.23.4", features = ["v1_22"] }

[lints]
workspace = true
